# diskspaced

./: .gitignore  README.md  azure-pipelines.yml  pyproject.toml  stylecheck.sh  test.sh
diskspaced/: __init__.py  command_line.py  constants.py  defer.py  grand_perspective_writer.py  json_writer.py  temporary_recursion_limit.py  writer.py
tests/: test_basic.py
tests/data/: expected_test_scan_downloads_gp  expected_test_scan_downloads_json
